<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_Millisecond" Id="{7b27189b-b860-083b-04ae-fc74ce455fbf}">
    <Declaration><![CDATA[// Represents the milliseconds of the current second, ranging from 0 to 999.
TYPE T_Millisecond : UINT(0..999); END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>